# cloudcompchem

./: .pre-commit-config.yaml  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg
.github/workflows/: CI.yml
cloudcompchem/: client.py  controllers.py  dft.py  exceptions.py  main.py  make_celery.py  models.py  opt.py  server.py  tasks.py  utils.py  wsgi.py
deploy/: Dockerfile  build.sh
requirements/: common.txt  development.txt
svc/: app.py  controller.py  exceptions.py  models.py  test_controller.py  test_models.py  test_tachyon.py
tests/: conftest.py  test_client.py  test_models.py  test_opt.py  test_server.py
