[metadata]
name = cloudcompchem
version = 0.1.0

[options]
packages = find:
zip_safe = False
python_requires = >= 3.11
install_requires =
    Flask==3.0.2
    backoff==2.2.1
    gunicorn==21.2.0
    Werkzeug==3.0.1
    requests==2.31.0
    pysll==0.1.2
    pyscf==2.5.0
    basis_set_exchange==0.9.1
    celery[redis]==5.4.0

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cloudcompchem = cloudcompchem.main:main

[flake8]
max-line-length = 120
extend-ignore = E203
