[metadata]
name = cloudcompchem
version = 0.1.0

[options]
packages = find:
zip_safe = False
python_requires = >= 3.12
install_requires =
    Flask==3.0.3
    backoff==2.2.1
    gunicorn==22.0.0
    Werkzeug==3.0.2
    requests==2.31.0
    pysll==0.1.2
    pyscf==2.5.0
    pyberny==0.6.3
    geometric==1.0.2
    basis-set-exchange @ git+https://github.com/MolSSI-BSE/basis_set_exchange@8b293defdcc0d300f9bdfc4a45eb8ce8b94b7fd9
    celery[redis]==5.4.0
    flower==2.0.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cloudcompchem = cloudcompchem.main:main

[flake8]
max-line-length = 120
extend-ignore = E203
